--- a/index.html
+++ b/index.html
@@ -1,47 +1,17 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<style>
-			html,
-			body {
-				font-family: Arial, sans-serif;
-				height: 100%;
-				margin: 0;
-				padding: 0;
-			}
-
-			#map {
-				bottom:0px;
-				height: 100%;
-				left: 362px;
-				position: absolute;
-				right: 0px;
-			}
-
-			.options-box {
-				background: #fff;
-				border: 1px solid #999;
-				border-radius: 3px;
-				height: 100%;
-				line-height: 35px;
-				padding: 10px 10px 30px 10px;
-				text-align: left;
-				width: 340px;
-			}
-		</style>
+		<link rel="stylesheet" href="css/style.css" >
 	</head>
 	<body>
-		<div class="container">
-			<div class="options-box">
-				<h1>Las Vegas Casinos</h1>
-				<div>
-					<input id="show-casinos" type="button" value="Show Casinos">
-					<input id="hide-casinos" type="button" value="Hide Casinos">
-				</div>
-			</div>
-			<div id="map"></div>
-		</div>
+		<div id="sidebar" class="container"
+			<button class="closebutton" onclick="sidebarClose()">&#9776;</button>
+			<h1 class="header">Las Vegas Casinos</h1>
+		</div>	
+		<span style="font-size: 25px" onclick="sidebarOpen()">&#9776;</span>
 
+		<div id="map"></div>
+		
 		<script>
 			var map;
 
@@ -51,7 +21,7 @@
 				//constructor creates a new map - only center and zoom are requred.
 				map = new google.maps.Map(document.getElementById('map'), {
 					center: {lat: 36.0827366, lng: -115.1110119},
-					zoom: 11
+					zoom: 13
 				});
 				
 				//marker locations
@@ -92,9 +62,7 @@
 				}
 				map.fitBounds(bounds);
 
-				document.getElementById('show-casinos').addEventListener('click', showCasinos);
-				document.getElementById('hide-casinos').addEventListener('click', hideCasinos);
-
+								
 			}
 			function populateInfoWindow(marker, infowindow) {
 				if (infowindow.marker !=marker) {
@@ -103,6 +71,7 @@
 					infowindow.open(map, marker);
 					infowindow.addListener('closeclick',function(){
 						infowindow.setMarker(null);
+						infowindow.close();
 					});
 					var streetViewService = new google.maps.StreetViewService();
 					var radius = 50;
@@ -112,7 +81,7 @@
 							var nearStreetViewLocation = data.location.latLng;
 							var heading = google.maps.geometry.spherical.computeHeading(
 								nearStreetViewLocation, marker.position);
-								infowindow.setContent('<div>' + marker.title + '</div><div id="pano"></div>');
+								infowindow.setContent('<div>' + marker.title + '</div><div id="pano" class="map-info-window"></div>');
 								var panoramaOptions = {
 									position: nearStreetViewLocation,
 									pov: {
@@ -131,20 +100,6 @@
 					infowindow.open(map, marker);
 				}
 			}
-			function showCasinos() {
-				var bounds = new google.maps.LatLngBounds();
-				for (var i = 0; i < markers.length; i++) {
-					markers[i].setMap(map);
-					bounds.extend(markers[i].position);
-				}
-				map.fitBounds(bounds);
-			}
-
-			function hideCasinos() {
-				for (var i = 0; i < markers.length; i++) {
-					markers[i].setMap(null);
-				}
-			}
 			function makeMarkerIcon(markerColor) {
 				var markerImage = new google.maps.MarkerImage(
 					'http://chart.googleapis.com/chart?chst=d_map_spin&chld=1.15|0|'+ markerColor +
@@ -155,10 +110,16 @@
 					new google.maps.Size(21, 34));
 				return markerImage;
 			}
+			function sidebarOpen() {
+				document.getElementById("sidebar").style.display = "20%";				
+			}
+			function sidebarClose() {
+				document.getElementById("sidebar").style.display = "0%";
+			}
 		</script>
 
 		<script async defer
-			src="https://maps.googleapis.com/maps/api/js?libraries=geometry&key=AIzaSyCSdGUm5yjbrlRlObfBxTkj10fTao5GGjg&v=3&callback=initMap">
+			src="https://maps.googleapis.com/maps/api/js?libraries=drawing,geometry&key=AIzaSyCSdGUm5yjbrlRlObfBxTkj10fTao5GGjg&v=3&callback=initMap">
 
 		</script>
 	</body>
