--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 			<button class="closebutton" onclick="sidebarClose()">&#9776;</button>
 			<h1>Las Vegas Casinos</h1>
 		</div>
-		<div id="map" class="main">
-			<span style="font-size: 25px" onclick="sidebarOpen()">&#9776;</span>
+        <span class="main" onclick="sidebarOpen()">&#9776;</span>
+		<div id="map">
 		</div>
 				
 		<script>
@@ -70,7 +70,7 @@
 					infowindow.setContent('<div>' + marker.title + '</div>');
 					infowindow.open(map, marker);
 					infowindow.addListener('closeclick',function(){
-						infowindow.setMarker(null);
+						infowindow.marker = null;
 						infowindow.close();
 					});
 					var streetViewService = new google.maps.StreetViewService();
@@ -116,6 +116,7 @@
 			}
 			function sidebarClose() {
 				document.getElementById("sidebar").style.width = "0";
+				document.getElementById("map").style.marginLeft = "0";
 			}
 		</script>
 		<script async defer
