--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 	</head>
 	<body>
 		<div id="sidebar" class="container"
-			<a href="javascript:void(0)" class="closebutton" onclick="sidebarClose()">&times;</a>
-			<h1>Las Vegas Casinos</h1>
+			<a href="javascript:void(0)" class="closebutton" onclick="sidebarClose()">&times;Close</a>
+			<a>Las Vegas Casinos</a>
 		</div>
         <span class="main" onclick="sidebarOpen()">&#9776;</span>
 		<div id="map">
