--- a/index.html
+++ b/index.html
@@ -14,14 +14,15 @@
 			</div>
 			<span>Casinos</span>
 			<ul id="casino-list" data-bind="foreach: casinosList">
-				<li><button class="casinoButton" data-bind="text: $data"></button></li>
+				<li><button class="casinoButton" data-bind="text: $data.title, click: selectClick"></button></li>
 			</ul>
 		</div>	
 		<div id="map">
 		</div>
 		<script async defer	src="https://maps.googleapis.com/maps/api/js?libraries=drawing,geometry&key=AIzaSyCSdGUm5yjbrlRlObfBxTkj10fTao5GGjg&v=3&callback=initMap"></script>
+		
 		<script src="js/jquery.min.js"></script>
-		<script src="js/app.js"></script>
 		<script src="js/knockout-3.4.0.js"></script>
+		<script src="js/app.js"></script>
 	</body>
 </html>
