--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<div id="container" class="containerBox">
 			<div id="sidebar" class="locationSidebar">
 				<h1>Las Vegas Casinos</h1>
-				<input type="text" placeholder="Search...">
+				<input type="text" id="searchInput" data-bind="textInput: searchCasino" placeholder="Search...">
 				<hr>	
 			</div>
 			<span>Casinos</span>
