--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 				<hr>	
 			</div>
 			<span>Casinos</span>
-			<ul id="casino-list" data-bind="foreach: casinosList">
+			<ul id="casino-list" data-bind="foreach: filter">
 				<li><button class="casinoButton" data-bind="text: $data.title, click: selectClick"></button></li>
 			</ul>
 		</div>	
