--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 		<script src="js/jquery.min.js"></script>
 		<script src="js/knockout-3.4.0.js"></script>
 		<script src="js/app.js"></script>
-		<script async defer	src="https://maps.googleapis.com/maps/api/js?libraries=drawing,geometry&key=AIzaSyCSdGUm5yjbrlRlObfBxTkj10fTao5GGjg&v=3&callback=initMap"></script>
+		<script async defer	src="https://maps.googleapis.com/maps/api/js?libraries=drawing,geometry&key=AIzaSyCSdGUm5yjbrlRlObfBxTkj10fTao5GGjg&v=3&callback=initMap" onerror="googleError()">
+		</script>
 	</body>
 </html>
